# fusi-bids-examples

./: .gitignore  README.md  README.rst  convert-opioids.ipynb  create-example-2dt-dataset.ipynb  pyproject.toml
datasets/0.0.10/: CHANGES.md  README.md  dataset_description.json  participants.json  participants.tsv  pwd.json
datasets/0.0.10/sub-01/: sub-01_sessions.tsv
datasets/0.0.10/sub-02/: sub-02_sessions.tsv
datasets/0.0.10/sub-03/: sub-03_sessions.tsv
datasets/0.0.10/sub-06/: sub-06_sessions.tsv
datasets/0.0.10/sub-08/: sub-08_sessions.tsv
datasets/0.0.11/: README.md  dataset_description.json  pwd.json
datasets/0.0.11/sub-02/: sub-02_sessions.tsv
datasets/0.0.11/sub-04/: sub-04_sessions.tsv
datasets/0.0.11/sub-05/: sub-05_sessions.tsv
datasets/0.0.11/sub-06/: sub-06_sessions.tsv
datasets/0.0.11/sub-07/: sub-07_sessions.tsv
datasets/0.0.11/sub-09/: sub-09_sessions.tsv
datasets/0.0.11/sub-10/: sub-10_sessions.tsv
datasets/0.0.12/: CHANGES.md  README.md  dataset_description.json  pwd.json  task-stim_events.tsv
datasets/0.0.12/sub-01/: sub-01_sessions.tsv
datasets/0.0.12/sub-03/: sub-03_sessions.tsv
datasets/0.0.12/sub-05/: sub-05_sessions.tsv
datasets/0.0.12/sub-08/: sub-08_sessions.tsv
datasets/0.0.12/sub-09/: sub-09_sessions.tsv
datasets/0.0.9/: CHANGES.md  README.md  dataset_description.json  participants.tsv  pwd.json
datasets/0.0.9/sub-01/: sub-01_sessions.tsv
datasets/0.0.9/sub-02/: sub-02_sessions.tsv
scripts/: generate_synthetic_2dt_dataset.py  generate_synthetic_3dt_dataset.py
(+85 files in other folders)
