[project]
name = "fus-bids-examples"
version = "0.0.9"
description = "A set of fUS-BIDS compatible datasets with empty raw data files."
authors = [
    { name = "Samuel Le Meur-Diebolt", email = "samuel@diebolt.io" }
]
dependencies = [
    "numpy~=2.0.1",
    "pandas~=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fus_bids_examples"]
