[project]
name = "fusi-bids-examples"
version = "0.0.11"
description = "A set of fUSI-BIDS compatible example datasets with empty raw data files."
authors = [
    { name = "Samuel Le Meur-Diebolt", email = "samuel@diebolt.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
]
